# Self-Balancing-Robot

./: README.md  README.txt
MATLAB/: Blocks.slx  PIDer.slx  PIDtest.m  PendulumModel.slx  PendulumSim.slx  PendulumTF.m  README.txt  SelfBalance.slx  SelfBalanceAnim.m  SelfBalanceScript.m  tester.m
MATLAB/slprj/sim/varcache/Blocks/: checksumOfCache.mat  varInfo.mat
MATLAB/slprj/sim/varcache/Blocks/tmwinternal/: simulink_cache.xml
MATLAB_to_PYTHON/: PID.py  SelfBalance.py
ROS_Stuff/robot_model_1/: CMakeLists.txt  package.xml
ROS_Stuff/robot_model_1/launch/: main.launch  rviz.launch
ROS_Stuff/robot_model_1/meshes/: chassis.STL  left_wheel-1.STL  left_wheel.STL  left_wheelmain.STL  right_wheel-1.STL  right_wheel.STL  robot_Chassis_3.stl  robot_Wheel_1.stl  robot_Wheel_2.stl  robot_assembly-1.STL  robot_assembly.STL
ROS_Stuff/robot_model_1/src/: CVsim.py  balance.py
ROS_Stuff/robot_model_1/urdf/: robot01 (copy).urdf  robot01.urdf  robot01.urdf.xacro  robot02.urdf
StateMachines_and_TestBenches/: PrototypeRefinement1.py  state_machines - Copy.py  test_bench.py
